force-app/main/default/objects/Historique_des_fonctions__c/Historique_des_fonctions__c.object-meta.xml
<CustomObject>
    <label>Historique des fonctions</label>
    <nameField>
        <displayFormat>HF-{0000}</displayFormat>
        <label>Référence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historiques des fonctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>