force-app/main/default/objects/Historique_des_fonctions__c/fields/Adherent__c.field-meta.xml
<CustomField>
    <fullName>Adherent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adhérent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Historiques des fonctions</relationshipLabel>
    <relationshipName>Historiques_des_fonctions</relationshipName>
    <type>Lookup</type>
</CustomField>