force-app/main/default/objects/Historique_des_fonctions__c/fields/Categorie__c.field-meta.xml
<CustomField>
    <fullName>Categorie__c</fullName>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrateurs</fullName>
            </value>
            <value>
                <fullName>Animateurs</fullName>
            </value>
            <value>
                <fullName>Commission d&apos;audit</fullName>
            </value>
            <value>
                <fullName>Commission de Contrôle</fullName>
            </value>
            <value>
                <fullName>Correspondants</fullName>
            </value>
            <value>
                <fullName>Délégués</fullName>
            </value>
            <value>
                <fullName>Délégués Régionaux</fullName>
            </value>
            <value>
                <fullName>Membres du bureau</fullName>
            </value>
            <value>
                <fullName>Membres du CA</fullName>
            </value>
            <value>
                <fullName>Référents départementaux</fullName>
            </value>
            <value>
                <fullName>Retraités</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>