force-app/main/default/objects/Historique_des_fonctions__c/fields/Date_debut__c.field-meta.xml
<CustomField>
    <fullName>Date_debut__c</fullName>
    <label>Date début</label>
    <type>Date</type>
</CustomField>