force-app/main/default/objects/Historique_des_fonctions__c/fields/Date_fin__c.field-meta.xml
<CustomField>
    <fullName>Date_fin__c</fullName>
    <label>Date fin</label>
    <type>Date</type>
</CustomField>