force-app/main/default/objects/Historique_des_fonctions__c/fields/Entite__c.field-meta.xml
<CustomField>
    <fullName>Entite__c</fullName>
    <label>Entité</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistance</fullName>
            </value>
            <value>
                <fullName>Prévoyance</fullName>
            </value>
            <value>
                <fullName>Œuvre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>