force-app/main/default/objects/Historique_des_fonctions__c/fields/Fonction__c.field-meta.xml
<CustomField>
    <fullName>Fonction__c</fullName>
    <label>Fonction</label>
    <referenceTo>Fonction__c</referenceTo>
    <relationshipLabel>Historiques des fonctions</relationshipLabel>
    <relationshipName>Historiques_des_fonctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>