force-app/main/default/objects/Historique_des_fonctions__c/fields/Section_de_vote__c.field-meta.xml
<CustomField>
    <fullName>Section_de_vote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section de vote</label>
    <referenceTo>Section_de_vote__c</referenceTo>
    <relationshipLabel>Historiques des fonctions</relationshipLabel>
    <relationshipName>Historiques_des_fonctions</relationshipName>
    <type>Lookup</type>
</CustomField>