force-app/main/default/objects/Historique_des_fonctions__c/fields/Section_locale__c.field-meta.xml
<CustomField>
    <fullName>Section_locale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section locale</label>
    <referenceTo>Section_locale__c</referenceTo>
    <relationshipLabel>Historiques des fonctions</relationshipLabel>
    <relationshipName>Historiques_des_fonctions</relationshipName>
    <type>Lookup</type>
</CustomField>